--- a/src/app/components/about/index.css
+++ b/src/app/components/about/index.css
@@ -1,25 +1,29 @@
 #about{
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     max-height: 1080px;
     max-width: 1920px;
 }
 
-.section-back-title{
-    position: absolute;
-    top: 113%;
-    left: 18%;
-    z-index: -2;
+.section-back-title-wrapper{
+    width: 100%;
+    position: relative;
     font-weight: bold;
     font-size: 93px;
     line-height: 90px;
     text-align: center;
     text-transform: uppercase;
     color: #F4F9FC;;  
+}
+
+.section-back-title{
+    position: absolute;
+    top: 133px;
+    left: 26%;
+    z-index: -2;
 }
 
 .section-title{
@@ -74,5 +78,22 @@ font-weight: bold;
 font-size: 60px;
 line-height: 45px;
 color: #2874A6;
+}
+
+.logo-about-wrapper{
+    position: relative;
+    height: 160px;
+    width: 100%;
+}
+
+#logo-about{
+    position: absolute;
+    left: 50%;
+    top: 130px;
+}
+
+#circle{
+    position: absolute;
+    left: 45.25%;
 }
 
