--- a/src/app/components/about/index.css
+++ b/src/app/components/about/index.css
@@ -3,13 +3,14 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 200vh;
-    max-height: 1080px;
-    max-width: 1920px;
+    height: 300vh;
+    /* max-height: 1080px;
+    max-width: 1920px; */
 }
 
 .section-back-title-wrapper{
-    width: 100%;
+    width: 1170px;
+    max-height: 100%;
     position: relative;
     font-weight: bold;
     font-size: 93px;
@@ -20,15 +21,20 @@
 }
 
 .section-back-title{
+    margin-top: 130px;
     position: absolute;
-    top: 133px;
-    left: 26%;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
     z-index: -2;
 }
 
 .section-title{
+    margin-top: 185px;
+    text-transform: uppercase;
 font-weight: bold;
-margin-top: 185px;
+
 font-size: 40px;
 line-height: 35px;
 color: #5DADE2;;
