--- a/src/app/components/about/index.css
+++ b/src/app/components/about/index.css
@@ -9,7 +9,8 @@
 }
 
 .section-back-title-wrapper{
-    width: 1170px;
+    max-width: 100vw;
+    width: 100%;
     max-height: 100%;
     position: relative;
     font-weight: bold;
@@ -20,14 +21,21 @@
     color: #F4F9FC;;  
 }
 
+
+
 .section-back-title{
     margin-top: 130px;
+    
     position: absolute;
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
-    margin-right: auto; 
-    z-index: -2;
+    top: 0;
+    left: 25%;
+    /* width: 100%; */
+    text-align: center;
+    font-size: 93px;
+    text-transform: uppercase;
+    color: #f4f9fc;
+    line-height: 1;
+    z-index: -1;
 }
 
 .section-title{
@@ -47,9 +55,13 @@ color: #5DADE2;;
     text-align: center;
     max-width: 1167px;
     height: 150px;
-    margin: 80px 0px 65px 0px;
+    margin: 80px 30px 65px 30px;
     font-size: 18px;
     line-height: 30px;
+}
+
+.end-cite{
+    margin: 0 30px;
 }
 
 .key-words{
@@ -58,10 +70,10 @@ color: #5DADE2;;
 
 .about-cards{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 1167px;
+    max-width: 100%;
     width: 100%;
     margin-bottom: 65px;
 }
@@ -70,6 +82,7 @@ color: #5DADE2;;
     display: flex;
     text-align: center;
     flex-direction: column;
+    margin: 30px;
     max-width: 269px;
     max-height: 296px;
     padding: 0 15px 0 15px;
@@ -99,7 +112,36 @@ color: #2874A6;
 }
 
 #circle{
+    
     position: absolute;
-    left: 45.25%;
+    left: 45%;
 }
+
+
+
+@media screen and (max-width: 670px) {
+    .section-back-title{
+        font-size: 27px;
+        line-height: 30px;
+        left: 11%;
+        margin-top: 167px;
+    }
+    .section-title{
+        font-size: 18px;
+    line-height: 20px;
+    }
+
+    .section-cite{
+        font-size: 14px;
+    line-height: 23px;
+    }
+
+    .end-cite{
+        display: none;
+    }
+
+    #circle{
+        left: 23%;
+    }
+     }
 
