--- a/src/app/components/contact/index.css
+++ b/src/app/components/contact/index.css
@@ -16,6 +16,8 @@
     height: 100%;
     display: flex;
     align-items: center;
+    max-width: 100vw;
+    margin-bottom: 130px;
 }
 
 form, .form_wrapper{
@@ -39,15 +41,15 @@ form, .form_wrapper{
 .input-wrapper, .input-wrapper-message{
     margin-top: 75px;
     margin-right: 30px;
-    min-width: 570px;
+    width: 700px;
     height: 25px;
     border: none;
     border-bottom: 1px solid #2874A6;
 }
 
 .input-wrapper-message{
-    max-width: 1169px;
-    width: 100%;
+    
+    width: 1425px;
 }
 
 .sendButton{
@@ -63,4 +65,18 @@ form, .form_wrapper{
     line-height: 19px;
     border: none;
 }
+
+@media screen and (max-width: 1230px) {
+   .input-wrapper-message{
+       max-width: 700px;
+   }
+    }
+
+    @media screen and (max-width: 670px) {
+        .input-wrapper, .input-wrapper-message{
+          max-width: 80%;
+            width: 80%;
+        }
+    
+         }
 
