--- a/src/app/components/footer/index.css
+++ b/src/app/components/footer/index.css
@@ -1,11 +1,15 @@
 
 
 #footer{
+   margin-top: 50px;
+   width: 100%;
+}
+footer{
+    padding: 40px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding-top: 80px;
     text-align: center;
     width: 100%;   
     color: white;
@@ -15,7 +19,6 @@
     background-size: cover;
     box-shadow: inset 0 0 0 1000px rgba(27, 79, 114, 0.75);
 }
-
 .contacts{
     text-align: center;
     flex-wrap: wrap;
@@ -34,3 +37,11 @@ font-size: 16px;
 line-height: 25px;
 padding-top: 80px;
 }
+
+@media screen and (max-width: 670px) {
+    .rights{
+        padding-top: 0;
+        line-height: 32px;
+    }
+     }
+
