--- a/src/app/components/reviews/index.css
+++ b/src/app/components/reviews/index.css
@@ -4,23 +4,29 @@
     align-items: center;
     background-color: #FBFBFB;
     margin-top: 158px;
-    min-height: 110vh;
+    min-height: 130vh;
     width: 100%;
 }
 
 .slider-container{
     margin-top: 182px;
+    width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 672px;
-    width: 1170px;
+    max-width: 100vw;
+    /* min-width: 100vw; */
     background-color: #5DADE2;
 }
 
+.slider-wrapper{
+   width: 95%;
+}
+
 .slide{
-    width: 912px;
+    max-width: 100%;
     height: 412px;
     background-color: white;
     display: flex;
@@ -84,7 +90,7 @@ height: 2px;
 width: 262px;
 }
 .splide__track{
-    width: 912px !important;
+    max-width: 100vw !important;
 } 
 
 #splide01-slide01{
@@ -95,7 +101,8 @@ width: 262px;
 
 .splide__arrow{
     top: 115% !important;
-    width: 50em !important;
+    /* width: 50em !important; */
+    max-width: 100vw !important;
 }
 
 .splide__arrow.splide__arrow--prev {
@@ -131,4 +138,49 @@ width: 262px;
     background: #fff !important;
     transform: none !important;
 }
+
+.splide__list{
+    max-width: 90vw !important;
+}
+
+
+
+@media screen and (max-width: 900px) {
+    .slide-name, .slide-company{
+     font-size: 16px;
+    }
+    .slide-description{
+        font-size: 14px;
+    }
+
+    .slide-description{
+        padding: 0 40px 20px 40px;
+    }
+     }
+
+     @media screen and (max-width: 600px) {
+        .slide-description{
+            padding: 0 10px 5px 10px;
+        }
+        .splide__arrow{
+            /* width: 50em !important; */
+            max-width: 80vw !important;
+        }
+
+         }
+
+         @media screen and (max-width: 400px) {
+            .slide-description{
+                padding: 0 2px 2px 2px;
+            }
+            .line{
+                margin-top: 10px;
+            }
+            .coma-1{
+                left: 43%;
+            }
+            .coma-2{
+                left: 56%;
+            }
+             }
 
