--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
+    /* outline: 1px solid #f00 !important; */
+
 }
 
 body {
   box-sizing: border-box;
+  max-width: 100vw;
   min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   margin: 0;
